# ansi-viewer

./: .eslintrc.json  .gitignore  README.md  biome.json  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: get_lines.rs  log_helper.rs  main.rs  open_file.rs  search.rs  serialize_to_client.rs
src-tauri/src/ansi_parser/: cli.rs  files.rs  format.rs  iterators.rs  mapping_file.rs  mod.rs  output.rs  parse_ansi_text.rs  parse_file.rs  streams_helpers.rs  test_utils.rs  types.rs
src-tauri/src/ansi_parser/cli/: definition.rs  mapping_file_command.rs  parse_command.rs
src-tauri/src/ansi_parser/files/: file_reader.rs  iterators.rs  streams.rs
src-tauri/src/ansi_parser/format/: lines_formatters.rs  spans_formatters.rs
src-tauri/src/ansi_parser/format/lines_formatters/: flat_json_line_formatter.rs  json_formatter.rs  lines_formats.rs  single_item_json_formatter.rs
src-tauri/src/ansi_parser/format/spans_formatters/: json_formatter.rs  single_item_json_formatter.rs  spans_formats.rs
src-tauri/src/ansi_parser/iterators/: compose.rs  split_to_lines.rs
src-tauri/src/ansi_parser/mapping_file/: constants.rs  create.rs  read.rs  tests.rs
src-tauri/src/ansi_parser/parse_ansi_text/: ansi.rs  ansi_output_to_spans.rs  ansi_text_to_output.rs  parse_options.rs  parse_text_matching_single_span.rs  raw_ansi_parse.rs
src-tauri/src/ansi_parser/parse_ansi_text/ansi/: ansi_sequence_helpers.rs  colors.rs  constants.rs  style.rs  types.rs
src-tauri/src/ansi_parser/parse_ansi_text/ansi_output_to_spans/: parse_ansi_as_line_of_spans.rs  parse_ansi_as_spans.rs  parse_ansi_split_by_lines_as_spans.rs
src-tauri/src/ansi_parser/parse_ansi_text/ansi_text_to_output/: helpers.rs  parse.rs  str_part_parse.rs
src-tauri/src/ansi_parser/parse_file/: file_to_lines_of_spans.rs  file_to_spans.rs  from_middle_of_file.rs  tests.rs  types.rs
(+89 files in other folders)
