[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "api-all",  "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ansi-parser = "0.9.0"
demonstrate = "0.4.5"
bitflags = "2.5.0"
heapless = "0.8.0"
test-case = "3.3.1"
clap = { version = "4", features = ["derive"] }
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
get_chunk = "1.2.1"

async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
nom = "7.1.3"
sonic-rs = "0.3.5"
atoi = "2.0.0"
const_typed_builder = "0.3.0"
genawaiter = "0.99.1"
peak_alloc = "0.2.1"
memchr = { version = "2", default-features = false }
itertools = "0.13.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
